# MongoDB-connector

./: pyproject.toml
mongodb_connector/: __main__.py  mongoConnector.py  sparkMongo.py
mongodb_connector/config/: config.yaml
